[package]
name = "redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["resp"]

[dependencies]
async-trait = "0.1"
bytes = "1.1"
deadpool = "0.9"
futures = "0.3"
resp = { path = "./resp" }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"
tokio = { version = "1.0", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
