[package]
name = "redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["resp"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bytes = "1.1"
deadpool = { version = "0.9", optional = true }
futures = "0.3"
pin-project-lite = "0.2"
resp = { path = "./resp" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = "0.11"
tokio = { version = "1.0", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test = "0.4"

[features]
pool = ["async-trait", "deadpool"]
model = ["serde"]
