[package]
name = "redust"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/appellation/redust"
license = "MIT"
description = "A simple Redis client for Rust."
keywords = ["redis"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["resp"]

[dependencies]
async-trait = { version = "0.1", optional = true }
bytes = "1.1"
deadpool = { version = "0.9", optional = true }
futures = "0.3"
pin-project-lite = "0.2"
redust-resp = { path = "./resp", version = "0.2" }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }
tokio = { version = "1.18", features = ["net"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
lazy_static = "1.4"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4"

[features]
pool = ["async-trait", "deadpool"]
model = ["serde", "serde_bytes"]
script = ["serde_bytes"]

[package.metadata.docs.rs]
all-features = true
