[package]
name = "resp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1"
itertools = "0.10"
nom = "7.1"
serde = "1.0"
serde_bytes = "0.11"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"]}
